# libpostal-rs

./: .gitignore  Cargo.toml  README.md  build.rs  todo-refactor-data-module.md
benches/: parsing_benchmarks.rs  simple_bench.rs
examples/: advanced_usage.rs  basic_parsing.rs  basic_usage.rs  data_download.rs
src/: data.rs  error.rs  ffi.rs  lib.rs  normalizer.rs  parser.rs  profiling.rs  types.rs
